--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -196,7 +196,11 @@
               <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="media align-items-center">
                   <span class="avatar avatar-sm rounded-circle">
-                    <img alt="Image placeholder" src="/static/assets/img/theme/team-4.jpg">
+                    {% if request.user.picture %}
+                      <img src="{{request.user.picture.url}}" alt="Photo">
+                    {% else %}
+                      <img src="/static/assets/img/theme/team-4.jpg">
+                    {% endif %}
                   </span>
                   <div class="media-body  ml-2  d-none d-lg-block">
                     <span class="mb-0 text-sm  font-weight-bold">
@@ -207,24 +211,24 @@
               </a>
               <div class="dropdown-menu  dropdown-menu-right ">
                 <div class="dropdown-header noti-title">
-                  <h6 class="text-overflow m-0">Welcome!</h6>
+                  <h6 class="text-overflow m-0">Bienvenue!</h6> {{ request.user.first_name }} {{ request.user.last_name }}
                 </div>
-                <a href="/page-profile.html" class="dropdown-item">
+                <a href="{% url 'home:page_profile' request.user.id %}" class="dropdown-item">
                   <i class="ni ni-single-02"></i>
-                  <span>My profile</span>
+                  <span>Mon profil</span>
                 </a>
                 <a href="#!" class="dropdown-item">
                   <i class="ni ni-settings-gear-65"></i>
                   <span>Settings</span>
                 </a>
-                <a href="#!" class="dropdown-item">
+                <!-- <a href="#!" class="dropdown-item">
                   <i class="ni ni-calendar-grid-58"></i>
                   <span>Activity</span>
                 </a>
                 <a href="#!" class="dropdown-item">
                   <i class="ni ni-support-16"></i>
                   <span>Support</span>
-                </a>
+                </a> -->
                 <div class="dropdown-divider"></div>
                 <a href="{% url 'authentication:logout' %}" class="dropdown-item">
                   <i class="ni ni-user-run"></i>
