Permissions forms partially handled

--- a/apps/templates/accounts/add-permissions.html
+++ b/apps/templates/accounts/add-permissions.html
@@ -83,7 +83,7 @@
                                 <div class="form-group">
                                   <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
-                                      <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                      <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                     </div>
                                     {{ form.name }}
                                   </div>
@@ -95,7 +95,7 @@
                                 <div class="form-group">
                                   <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
-                                      <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                      <span class="input-group-text"><i class="fas fa-tag"></i></span>
                                     </div>
                                     {{ form.profile_type }}
                                   </div>
@@ -107,7 +107,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-tasks"></i></span>
                                 </div>
                                 {{ form.list }}
                               </div>
