--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -2,19 +2,19 @@
     <!-- The Inner links -->
     <div class="scrollbar-inner">
         <!-- Brand -->
-        <div class="sidenav-header  d-flex  align-items-center">
-            <a class="navbar-brand" href="/">
-            <img src="/static/assets/img/brand/logo.jpg" style="width: 500px;height: 1000px;;" class="navbar-brand-img" alt="Logo">
+        <div class="sidenav-header d-flex align-items-center">
+            <a class="navbar-brand mt-4" href="/">
+                <img src="/static/assets/img/brand/logo.jpg" style="max-height: 100%;" class="navbar-brand-img" alt="Logo">
             </a>
             <div class=" ml-auto ">
-            <!-- Sidenav toggler -->
-            <div class="sidenav-toggler d-none d-xl-block" data-action="sidenav-unpin" data-target="#sidenav-main">
-                <div class="sidenav-toggler-inner">
-                <i class="sidenav-toggler-line"></i>
-                <i class="sidenav-toggler-line"></i>
-                <i class="sidenav-toggler-line"></i>
+                <!-- Sidenav toggler -->
+                <div class="sidenav-toggler d-none d-xl-block" data-action="sidenav-unpin" data-target="#sidenav-collapse-main">
+                    <div class="sidenav-toggler-inner">
+                        <i class="sidenav-toggler-line"></i>
+                        <i class="sidenav-toggler-line"></i>
+                        <i class="sidenav-toggler-line"></i>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
         <div class="navbar-inner">
