--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -176,23 +176,25 @@
       <div class="col-xl-4 col-md-6">
         <div class="card card-stats">
           <!-- Card body -->
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">Total Utilisateurs</h5>
-                <span class="h1 font-weight-bold mb-0 display-1">{{total_users}}</span>
-              </div>
-              <div class="col-auto">
-                <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
-                  <i class="ni ni-chart-bar-32"></i>
+          {% if request.user.profile.type.id == 1 %}
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Total Utilisateurs</h5>
+                  <span class="h1 font-weight-bold mb-0 display-1">{{total_users}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
+                    <i class="ni ni-chart-bar-32"></i>
+                  </div>
                 </div>
               </div>
+              <p class="mt-3 mb-0 text-sm">
+                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                <span class="text-nowrap">Since last month</span>
+              </p>
             </div>
-            <p class="mt-3 mb-0 text-sm">
-              <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-              <span class="text-nowrap">Since last month</span>
-            </p>
-          </div>
+          {% endif %}
         </div>
       </div>
     </div>
