--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -70,13 +70,14 @@
                 </h3>
               </div>
               <!-- Light table -->
-              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "company", "amount", "actions"]'>
+              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "company", "status", "amount", "actions"]'>
                 <table class="table align-items-center table-flush">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" class="sort" data-sort="n°">N°</th>
                       <th scope="col" class="sort" data-sort="ref">Référence</th>
                       <th scope="col" class="sort" data-sort="company">Entreprise</th>
+                      <th scope="col" class="sort" data-sort="status">Statut</th>
                       <th scope="col" class="sort" data-sort="amount">Montant</th>
                       <th scope="col" class="sort" data-sort="Actions">Actions</th>
                     </tr>
@@ -93,15 +94,18 @@
                         <td class="company">
                           {{facture.client.name}}
                         </td>
+                        <td class="status">
+                          {{facture.get_status_display}}
+                        </td>
                         <td>
                             {{facture.amount}} {{facture.devise.sign}}
                         </td>
                         <td class="text-center justify-content-center">
-                          <span>
-                            {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %}
+                          {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %}
+                            <span>
                               <button class="btn btn-sm btn-icon-only" role="button" data-id="a-factures-consulter" data-toggle="modal" data-target="#modal-facture-{{facture.id}}">View</button>
-                            {% endif %}
-                          </span>
+                            </span>
+                          {% endif %}
                             
                           <div class="modal fade" id="modal-facture-{{facture.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-facture-{{facture.id}}" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="dialog">
@@ -223,16 +227,64 @@
                             </div>
                           </div>
 
-                          <!-- <span>
-                            <button data-href="{% url 'paiement:edit_payment' facture.id %}" class="edit-link btn btn-sm btn-icon-only" role="button">Edit</button>
-                          </span> -->
+                          {% if 'a-factures-payer' in user.permissions.codes or user.is_staff %}
+                            {% if facture.status == 'unpaid' %}
+                            <span>
+                              <button class="btn btn-sm btn-icon-only" data-id="a-factures-payer" role="button" data-toggle="modal" data-target="#modal-factures-{{facture.id}}-payer">Pay</button>
+                            </span>
 
-                          <span>
-                            {% if 'a-factures-imprimer' in user.permissions.codes or user.is_staff %}
-                            <button data-href="{% url 'paiement:bill_receipt' facture.id %}" data-id="a-factures-imprimer" onclick="window.open($(this).data('href'), '_blank')" class="btn btn-sm btn-icon-only" role="button">Print</button>
+                            <div class="modal fade" id="modal-factures-{{facture.id}}-payer" tabindex="-1" role="dialog" aria-labelledby="modal-factures-{{facture.id}}-payer" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered" role="dialog">
+                                <div class="modal-content">
+                                  <div class="modal-header justify-content-center">
+                                    <h2>Confirmation</h2>
+                                  </div>
+                                  <form role="form" action="{% url 'paiement:generate_payment' %}" method="post">
+                                    {% csrf_token %}
+                                    <div class="modal-body">
+              
+                                      <div class="card card-agency mt--4 mb--4">
+                                        <div class="card-header text-center">
+                                          <div class="row text-center">
+                                            <div class="col">
+                                              Êtes-vous sûr de vouloir payer cette facture.
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <div class="card-body">
+                                          <div class="row">
+                                            <div class="col">
+                                              <div class="form-group">
+                                                <div class="input-group input-group-merge">
+                                                  <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                  </div>
+                                                  <input class="form-control" type="text" name="facture_ref" id="facture_ref" value="{{facture.reference}}" placeholder="N° de la référence" readonly>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                
+                                    </div>
+                                    <div class="modal-footer justify-content-center">
+                                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
+                                      <input type="submit" class="btn btn-primary" value="Oui">
+                                    </div>
+                                  </form>
+                                  
+                                </div>
+                              </div>
+                            </div>
                             {% endif %}
-                          </span>
-                          
+                          {% endif %}
+
+                          {% if 'a-factures-imprimer' in user.permissions.codes or user.is_staff %}
+                            <span>
+                              <button data-href="{% url 'paiement:bill_receipt' facture.id %}" data-id="a-factures-imprimer" onclick="window.open($(this).data('href'), '_blank')" class="btn btn-sm btn-icon-only" role="button">Print</button>
+                            </span>
+                          {% endif %}
                         </td>
                       </tr>
                     
