--- a/apps/templates/paiements/add-payment.html
+++ b/apps/templates/paiements/add-payment.html
@@ -82,16 +82,16 @@
                       <fieldset class="fieldset">
                         <legend></legend>
                         <div class="row">
-                          <div class="col-md-6">
+                          <!-- <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="fas fa-user"></i></span>
                                 </div>
-                                {{ paymentform.type }}
+                                {{ paymentform.type }} Heeelllllllloooooooooooooooo
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
