--- a/apps/templates/paiements/generate-payment.html
+++ b/apps/templates/paiements/generate-payment.html
@@ -140,7 +140,7 @@
                             <div class="form-group">
                                 <div class="input-group input-group-merge">
                                   <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                    <span class="input-group-text"><i class="fas fa-money-bill"></i></span>
                                   </div>
                                   {{ paymentform.devise }}
                                 </div>
@@ -172,7 +172,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ payerform.first }}
                               </div>
@@ -182,7 +182,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ payerform.last }}
                               </div>
@@ -194,7 +194,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
                                 {{ payerform.email }}
                               </div>
@@ -204,12 +204,9 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
-                                </div>
-                                {{ payerform.phone }}
-                                <div class="input-group-append">
                                   <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                 </div>
+                                {{ payerform.phone }}
                               </div>
                             </div>
                           </div>
@@ -219,7 +216,7 @@
                               <div class="form-group">
                                 <div class="input-group input-group-merge">
                                   <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                    <span class="input-group-text"><i class="fas fa-globe-africa"></i></span>
                                   </div>
                                   {{payerform.country_origin}}
                                 </div>
@@ -229,7 +226,7 @@
                                 <div class="form-group">
                                   <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
-                                      <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                      <span class="input-group-text"><i class="fas fa-address-book"></i></span>
                                     </div>
                                     {{payerform.address}}
                                   </div>
