--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -176,7 +176,7 @@
       <div class="col-xl-4 col-md-6">
         <div class="card card-stats">
           <!-- Card body -->
-          {% if request.user.profile.type.id == 1 %}
+          {% if request.user.profile.type.uid == 1 %}
             <div class="card-body">
               <div class="row">
                 <div class="col">
