--- a/apps/templates/paiements/edit-declaration.html
+++ b/apps/templates/paiements/edit-declaration.html
@@ -102,19 +102,19 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ declarationform.title }}
                               </div>
                             </div>
                           </div>
                         </div>
-                        <div>
+                        <div class="row">
                           <div class="col">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-comments"></i></span>
                                 </div>
                                 {{ declarationform.comment }}
                               </div>
@@ -157,7 +157,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-tag"></i></span>
                                                         </div>
                                                         {{ employeeform.job_category }}
                                                         </div>
@@ -167,7 +167,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-briefcase"></i></span>
                                                         </div>
                                                         {{ employeeform.job }}
                                                         </div>
@@ -179,7 +179,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-passport"></i></span>
                                                         </div>
                                                         {{ employeeform.passport_number }}
                                                         </div>
@@ -191,7 +191,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                                         </div>
                                                         {{ employeeform.first }}
                                                         </div>
@@ -201,7 +201,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                                         </div>
                                                         {{ employeeform.last }}
                                                         </div>
@@ -213,7 +213,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                                         </div>
                                                         {{ employeeform.email }}
                                                         </div>
@@ -223,7 +223,7 @@
                                                     <div class="form-group">
                                                         <div class="input-group input-group-merge">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                                                            <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                                         </div>
                                                         {{ employeeform.phone }}
                                                         </div>
@@ -363,7 +363,7 @@
                                               <div class="row">
                                                 <div class="col">
                                                   <i class="ni education_hat mr-2"></i><span class="text-muted"></span> 
-                                                  <strong>Etes-vous sûr de vouloir supprimer cet employé ?</strong>
+                                                  <strong>Êtes-vous sûr de vouloir supprimer cet employé ?</strong>
                                                 </div>
                                               </div>
                                               <input type="hidden" name="employee-id" value="0">
