--- a/apps/templates/paiements/edit-payment.html
+++ b/apps/templates/paiements/edit-payment.html
@@ -82,7 +82,7 @@
                       <fieldset class="fieldset">
                         <legend></legend>
                         <div class="row">
-                          <div class="col-md-6">
+                          <!-- <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
@@ -91,7 +91,7 @@
                                 {{ paymentform.type }}
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
