--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -43,18 +43,20 @@
 
         {% if messages %}
           <!-- Alerts -->
-          <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span class="alert-icon"><i class="ni ni-like-2"></i></span>
-            <span class="alert-text">
-              <strong>Success!</strong>
-              {% for message in messages %}
-                {{ message | safe }}
-              {% endfor %}
-            </span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+          {% for message in messages %}
+            <div class="alert alert-{% if message.tags == 'success' %}success{% else %}danger{% endif %} alert-dismissible fade show" role="alert">
+              <span class="alert-icon">
+                {% if message.tags == 'success' %}<i class="ni ni-like-2"></i>{% else %}<i class="fas fa-thumbs-down"></i>{% endif %}
+              </span>
+              <span class="alert-text">
+                <strong>{% if message.tags == 'success' %}Succès !{% else %}Erreur !{% endif %}</strong>
+                {{ message | safe }} <br>
+              </span>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          {% endfor %}
         {% endif %}
 
       
@@ -254,10 +256,11 @@
                                         <div class="card-body">
                                           <div class="row">
                                             <div class="col">
-                                              <div class="form-group">
+                                              <div class="form-group text-left">
+                                                <label for="facture_ref">Référence :</label>
                                                 <div class="input-group input-group-merge">
                                                   <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                    <span class="input-group-text"><i class="fas fa-barcode"></i></span>
                                                   </div>
                                                   <input class="form-control" type="text" name="facture_ref" id="facture_ref" value="{{facture.reference}}" placeholder="N° de la référence" readonly>
                                                 </div>
@@ -270,7 +273,7 @@
                                     </div>
                                     <div class="modal-footer justify-content-center">
                                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
-                                      <input type="submit" class="btn btn-primary" value="Oui">
+                                      <input type="button" onclick="$(this).closest('form').submit();" class="btn btn-primary" value="Oui">
                                     </div>
                                   </form>
                                   
