--- a/apps/templates/includes/sidebar-rtl.html
+++ b/apps/templates/includes/sidebar-rtl.html
@@ -1,6 +1,6 @@
 
   <!-- Sidenav -->
-  <nav class="sidenav navbar navbar-vertical  navbar-expand-xs navbar-light bg-white" id="sidenav-collapse-main">
+  <nav class="sidenav navbar navbar-vertical  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
 
     {% include 'includes/sidebar-inner.html' %}
 
